--- a/Youtube/index.html
+++ b/Youtube/index.html
@@ -19,7 +19,7 @@
                   <button class="bg-gray-100 text-sm px-5 h-8"><i class="material-icons border-0 text-gray-600">search</i></button>
             </form>
          </div>
-         <div class="flex items-center space-x-5">
+         <div class="flex items-center space-x-5 googleIcons">
             <a href="#"><img src="images/header/Create.svg"></a>
             <a href="#" class="cursor-pointer"><i class="material-icons cursor-pointer" >notifications</i></a>
             <a href="#" class="cursor-pointer"><i class="material-icons ">apps</i></a>
